@@ -8,5 +8,5 @@ public:
   CGUIDialogYesNo(void);
   virtual ~CGUIDialogYesNo(void);
   virtual bool OnMessage(CGUIMessage& message);
-  static bool ShowAndGetInput(int heading, int line0, int line1, int line2);
+  static bool ShowAndGetInput(int heading, int line0, int line1, int line2, int iNoLabel=-1, int iYesLabel=-1);
 };
