@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 17-05-2006 changed: cosmetic change to music scanner dialog + kai / trainer dialog.+
+ - 17-05-2006 fixed: launching game with kai from my programs with trainer active crashed.
  - 17-05-2006 added: Esperanto language file (Thnx to taiq)
  - 17-05-2006 updated: Spanish language file (Thnx to jose_t)
  - 17-05-2006 updated: Swedish language file (Thnx to blittan)
@@ -33,7 +35,7 @@ added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 13-05-2006 changed: don't show zoom overlay in slideshow when viewing comics.
  - 13-05-2006 fixed: [ 1483011 ] ControlListItem not able to display german umlaute
  - 13-05-2006 fixed: Keymap.xml - <Remote> Volume now works in VideoPlaylist/MusicPlayList & MyFiles. MoveItemUp(2), MoveItemDown(5). MyFiles : Highlight(1), Copy(4), Move(7).
- - 13-05-2006 fixed: Directorylisting in my music fileview was very slow because main thread wasn't leaving much cputime for the MusicInfoLoader. + very minor speedimprovement for imdb and allmusic lookups.
+ - 13-05-2006 fixed: Directorylisting in my music fileview was very  slow because main thread wasn't leaving much cputime for the MusicInfoLoader. + very minor speedimprovement for imdb and allmusic lookups.
  - 13-05-2006 fixed: Scripts window would not show .py files.
  - 13-05-2006 changed: libcurl will now follow 2 redirects on connection
  - 13-05-2006 fixed: flv streams would start very slowly in dvd player due to it trying to find all streams before starting to play. 
